[gd_scene load_steps=21 format=2]

[ext_resource path="res://music/mythica_01.ogg" type="AudioStream" id=1]
[ext_resource path="res://Tutorial.gd" type="Script" id=2]
[ext_resource path="res://Probe3d.tscn" type="PackedScene" id=3]
[ext_resource path="res://mainTheme.tres" type="Theme" id=4]
[ext_resource path="res://textures/consolePanel.png" type="Texture" id=5]
[ext_resource path="res://textures/crosshair.png" type="Texture" id=6]
[ext_resource path="res://MultiResource.tscn" type="PackedScene" id=7]
[ext_resource path="res://Sensor.tscn" type="PackedScene" id=8]
[ext_resource path="res://textures/fonts/mono45-headline.fnt" type="BitmapFont" id=9]
[ext_resource path="res://Resource.tscn" type="PackedScene" id=10]
[ext_resource path="res://Gimbal.tscn" type="PackedScene" id=11]
[ext_resource path="res://textures/sensors/icons_radio.png" type="Texture" id=12]
[ext_resource path="res://textures/sensors/icons_radiation.png" type="Texture" id=13]
[ext_resource path="res://textures/sensors/icons_spectro.png" type="Texture" id=14]
[ext_resource path="res://textures/sensors/icons_heat.png" type="Texture" id=15]
[ext_resource path="res://textures/sensors/icons_ufo1.png" type="Texture" id=16]
[ext_resource path="res://ViewportNoise.shader" type="Shader" id=17]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 17 )
shader_param/seed = 0.0
shader_param/density = 0.0
shader_param/noise1 = 39.561
shader_param/noise2 = 11.655
shader_param/noise3 = 55125.5

[sub_resource type="Environment" id=2]
ambient_light_color = Color( 0.760784, 0.537255, 0.113725, 1 )
ambient_light_energy = 0.49

[sub_resource type="World" id=3]
environment = SubResource( 2 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Console" type="Sprite" parent="."]
texture = ExtResource( 5 )
offset = Vector2( 256, 150 )

[node name="Crosshair" type="Sprite" parent="."]
position = Vector2( 51, 249 )
z_index = 1
texture = ExtResource( 6 )

[node name="UiControl" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 4 )
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UiControl"]
margin_left = 4.0
margin_top = 4.0
margin_right = 508.0
margin_bottom = 296.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer" type="ViewportContainer" parent="UiControl/VBoxContainer"]
margin_right = 504.0
margin_bottom = 195.0
rect_min_size = Vector2( 504, 195 )
stretch = true

[node name="Viewport" type="Viewport" parent="UiControl/VBoxContainer/ViewportContainer"]
size = Vector2( 504, 195 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Spatial" parent="UiControl/VBoxContainer/ViewportContainer/Viewport" instance=ExtResource( 3 )]

[node name="ColorRect" type="ColorRect" parent="UiControl/VBoxContainer/ViewportContainer"]
material = SubResource( 1 )
margin_right = 504.0
margin_bottom = 195.0

[node name="HBoxContainer" type="HBoxContainer" parent="UiControl/VBoxContainer"]
margin_top = 198.0
margin_right = 504.0
margin_bottom = 292.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer" type="ViewportContainer" parent="UiControl/VBoxContainer/HBoxContainer"]
margin_right = 94.0
margin_bottom = 94.0
rect_min_size = Vector2( 94, 94 )

[node name="Viewport" type="Viewport" parent="UiControl/VBoxContainer/HBoxContainer/ViewportContainer"]
size = Vector2( 94, 94 )
own_world = true
world = SubResource( 3 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Spatial" parent="UiControl/VBoxContainer/HBoxContainer/ViewportContainer/Viewport" instance=ExtResource( 11 )]

[node name="VBoxContainer" type="VBoxContainer" parent="UiControl/VBoxContainer/HBoxContainer"]
margin_left = 97.0
margin_right = 504.0
margin_bottom = 94.0
size_flags_horizontal = 3

[node name="GridContainer" type="GridContainer" parent="UiControl/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 407.0
margin_bottom = 73.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 5

[node name="Sensor0" parent="UiControl/VBoxContainer/HBoxContainer/VBoxContainer/GridContainer" instance=ExtResource( 8 )]
sensorColor = Color( 0.980392, 0.215686, 0.415686, 1 )
sciPerTick = 3
powerPerTick = 4
disabledColor = Color( 0.0901961, 0.0901961, 0.0941176, 1 )
sensorTexture = ExtResource( 12 )

[node name="Sensor1" parent="UiControl/VBoxContainer/HBoxContainer/VBoxContainer/GridContainer" instance=ExtResource( 8 )]
margin_left = 82.0
margin_right = 160.0
sensorNumber = 1
sensorColor = Color( 1, 0.694118, 0.666667, 1 )
usage = 1
sciPerTick = 8
powerPerTick = 6
disabledColor = Color( 0.0901961, 0.0901961, 0.0941176, 1 )
sensorTexture = ExtResource( 14 )

[node name="Sensor2" parent="UiControl/VBoxContainer/HBoxContainer/VBoxContainer/GridContainer" instance=ExtResource( 8 )]
margin_left = 164.0
margin_right = 242.0
sensorNumber = 2
sensorColor = Color( 0.666667, 0.478431, 0.615686, 1 )
usage = 1
sciPerTick = 2
disabledColor = Color( 0.0901961, 0.0901961, 0.0941176, 1 )
sensorTexture = ExtResource( 15 )

[node name="Sensor3" parent="UiControl/VBoxContainer/HBoxContainer/VBoxContainer/GridContainer" instance=ExtResource( 8 )]
margin_left = 246.0
margin_right = 324.0
sensorNumber = 3
sensorColor = Color( 0.239216, 0.807843, 0.666667, 1 )
sciPerTick = 12
powerPerTick = 10
disabledColor = Color( 0.0901961, 0.0901961, 0.0941176, 1 )
sensorTexture = ExtResource( 13 )

[node name="Sensor4" parent="UiControl/VBoxContainer/HBoxContainer/VBoxContainer/GridContainer" instance=ExtResource( 8 )]
margin_left = 328.0
margin_right = 406.0
sensorNumber = 4
sensorColor = Color( 0, 0.462745, 0.541176, 1 )
sciPerTick = 2
powerPerTick = 4
disabledColor = Color( 0.0901961, 0.0901961, 0.0941176, 1 )
sensorTexture = ExtResource( 16 )

[node name="TapeRes" parent="UiControl/VBoxContainer/HBoxContainer/VBoxContainer" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 76.0
margin_right = 407.0
margin_bottom = 80.0
colors = {
"Sensor0": Color( 1, 0.0431373, 0, 1 ),
"Sensor1": Color( 1, 0.988235, 0, 1 ),
"Sensor2": Color( 0.6, 0.960784, 0.392157, 1 ),
"Sensor3": Color( 0.0392157, 0.282353, 0.960784, 1 ),
"Sensor4": Color( 0.960784, 0.392157, 0.92549, 1 )
}

[node name="BatRes" parent="UiControl/VBoxContainer/HBoxContainer/VBoxContainer" instance=ExtResource( 10 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 83.0
margin_right = 407.0
margin_bottom = 87.0

[node name="RtgRes" parent="UiControl/VBoxContainer/HBoxContainer/VBoxContainer" instance=ExtResource( 10 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 90.0
margin_right = 407.0
margin_bottom = 94.0
rect_min_size = Vector2( 0, 4 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -15.0
autoplay = true

[node name="ScienceLbl" type="Label" parent="."]
margin_left = 328.0
margin_top = 2.0
margin_right = 508.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 9 )
text = "Science: 0 erlenmeyers"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LifetimeLbl" type="Label" parent="."]
margin_left = 328.0
margin_top = 12.0
margin_right = 508.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 9 )
text = "Lifetime: 0 days"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Overlay" type="Sprite" parent="."]
z_index = 2
offset = Vector2( 256, 150 )

[node name="Tut" type="Node2D" parent="."]
position = Vector2( -0.21463, 2 )
z_index = 3

[node name="Text" type="Label" parent="Tut"]
margin_left = 0.21463
margin_top = 23.0
margin_right = 512.215
margin_bottom = 198.0
custom_fonts/font = ExtResource( 9 )
text = "**TUTORIAL TEXT GOES HERE **"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Skip" type="Label" parent="Tut"]
margin_right = 512.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 9 )
text = "[Enter] to continue    [escape] to skip"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
